--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ private/replayer/patch_length.py
 private/replayer/test.mp4
 private/semantic-ui-theming/dist
 private/semantic-ui-theming/node_modules
+_ARCHIVE
