--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ private/replayer/test.mp4
 private/semantic-ui-theming/dist
 private/semantic-ui-theming/node_modules
 _ARCHIVE
+public/image/teams/small/ktrolster_2019.png
